--- a/Desktop/Beech1/index.html
+++ b/Desktop/Beech1/index.html
@@ -40,7 +40,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Residential - Commercial - Industrial</p>
+                <p class="masthead-subheading font-weight-light mb-0">Residential - Commercial - Services</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -123,7 +123,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit recusandae in expedita rerum repudiandae cumque iusto et eaque. Alias dolorum totam similique natus est impedit quidem facere ea recusandae reprehenderit.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">As an electrical company we strive to do our best in electrical installations and solutions</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure reprehenderit voluptatum corrupti blanditiis rerum temporibus quaerat, numquam autem illum quisquam culpa amet laboriosam ad architecto error ab dicta nisi hic.</p></div>
                 </div>
                 <!-- About Section Button-->
@@ -139,7 +139,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <div style="text-align: center;">
-                    <p>Please fill in the form below. We will get back to you ASAP!</p>
+                    <p>Please fill in the form below. We will get back to you as soon as possible!</p>
                     <p>For emergency requests please call us directly 24/7 at 123-456-7890.</p>
                 </div>
                 
